@@ -2,6 +2,7 @@
 v1.2.1 "cotidie morimur":
  - Fix functionality of "find all missing"
  - Add ability to reset settings by pressing R on startup or R in settings
+ - Add ability to sort titles
  - Add Hungarian translation
  - Add Polish translation
  - Add Japanese translation
